# arbo

./: .env.example  .gitignore  .pre-commit-config.yaml  ARBO_CTO_Development_Brief_v3.md  Arbo_CTO_Handoff_Memo.md  Arbo_DevBrief_FINAL.md  Arbo_DevBrief_v4_FINAL.md  CLAUDE.md  CTO_AUDIT_BRIEF.md  CTO_AUDIT_REPORT.md  CTO_MEMO_20260225.md  CTO_REBUILD_PLAN.md  LEARNINGS.md  alembic.ini  arbo.service  arbo_strategy_v1.md  btc_eth_statarb_backtest_spec.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_all_tables.py  002_polymarket_tables.py  003_add_system_state.py  004_rdh_tables.py  005_social_momentum.py  006_social_momentum_v2.py  007_add_strategy_to_paper_trades.py  008_add_strategy_to_paper_positions.py  008_health_volume_scanlog.py  009_health_volume_scanlog.py  010_weather_forecast_uq.py  011_ensemble_tables.py  012_add_exit_columns.py  013_shadow_variant_signals.py  014_shadow_variant_extras.py  015_orderbook_snapshots_d.py  016_shadow_exit_decisions.py
arbo/: __main__.py  main.py  main_rdh.py
arbo/agents/: gemini_agent.py
arbo/config/: settings.py
arbo/connectors/: binance_client.py  binance_ws.py  coingecko_client.py  event_matcher.py  gefs_downloader.py  kaito_api.py  lunarcrush_client.py  market_discovery.py  odds_api_client.py  orderbook_provider.py  polygon_flow.py  polymarket_client.py  rtds_chainlink.py  santiment_client.py  weather_iem.py  weather_metoffice.py  weather_models.py  weather_noaa.py  weather_openmeteo.py
arbo/core/: adaptive_config.py  auto_redeem.py  b2_watchdog.py  b3_metrics.py  b3_watchdog.py  bandit_allocator.py  confluence.py  d_watchdog.py  drift_monitor.py  exit_manager.py  fee_model.py  health_check.py  hypothesis_generator.py  live_executor.py  mid_sampler.py  paper_engine.py  performance_analyzer.py  pool_manager.py  promotion_engine.py  risk_manager.py  scanner.py  variant_pool.py
arbo/dashboard/: cli_dashboard.py  web.py  (+3 more)
config/: settings.live.yaml  settings.paper.yaml  settings.yaml  team_aliases.yaml  whale_wallets.yaml
docs/: B2_LIVE_CONDITIONS.md  B3_WATCHDOG_SPEC.md  C2_LIVE_TRADING_SPEC.md  CANARY_PROMOTION_SPEC.md  CEO_DECISION_STRATEGY_B_DATA_SOURCES_FINAL.md  CEO_DIRECTIVE_B2_LUNARCRUSH.md  CEO_DIRECTIVE_B2_SANTIMENT_COINGECKO.md  COOKIE_FUN_API_REPORT.md  DATA_PIPELINE_GUIDE.md  EXPERIMENT_FRAMEWORK_SPEC.md  KAITO_API_REPORT.md  KNOWLEDGE_BASE.md  OPEN_QUESTIONS.md  PAPER_TRADING_AR0134.md  PROJECT_PARALLEL_B2_DNBA_PLAN.md  RAPID_MODEL_DISCOVERY.md  RESEARCH_CROSS_DISCIPLINARY_EDGE.md  RESEARCH_PRICE_ORACLE_EDGE.md  SESSION_HANDOFF_20260322.md  SPRINT1_PLAN.md  STRATEGY_B2_SPEC.md  STRATEGY_B3_CHAINLINK.md  STRATEGY_B3_LIVE_SPEC.md  STRATEGY_B3_SPEC.md  STRATEGY_C2_SPEC.md  STRATEGY_C3_SPEC.md  STRATEGY_D_ARCHITECTURE.md  STRATEGY_D_CESTA_A_PLAN.md  STRATEGY_D_DATA_SPEC.md  STRATEGY_D_ML_DESIGN.md  STRATEGY_D_SPEC.md  STRATEGY_IDEAS_QUANTITATIVE_EDGE.md  STRATEGY_OPTIMIZATION_FRAMEWORK.md  STRATEGY_OPTIMIZATION_LEARNINGS.md  TA_INTEGRATION_SPEC.md  TECHNICAL_DECISIONS.md  TODO.md  TRADINGVIEW_MCP_ANALYSIS.md  VARIANT_LEADERBOARD_SPEC.md
research/: AUTORESEARCH_REPORT.md  AUTORESEARCH_REPORT_REAL.md  AUTORESEARCH_REPORT_V2.md  PRICE_HISTORY_DATA.md  analyze_per_city.py  autoresearch.py  b3_15m_shadow_export.csv  backtest_early_exit.py  backtest_harness.py  backtest_harness_v2.py  backtest_real_prices.py  bo_sweep.py  calibrate_bias.py  check_real_spreads.py  crypto_price_db.py  crypto_price_markets_analysis.md  download_crypto_pmd.py  download_crypto_price_history.py  download_goldsky_log.txt  download_goldsky_trades.py  download_price_history.py  download_weather_parallel.py  download_weather_pmd.py  experiment_framework.py  export_paper_trades.py  fetch_chainlink_resolutions.py  kelly_sweep.py  kelly_sweep_results.json  label_crypto_resolutions.py  optimization_results_v7.json  optimization_v6_log.txt  paper_validation.py  price_history_db.py  program.md  quick_calc_2000.py  run_experiment.py  run_experiments.sh  run_optimization_v7.py  strategy_experiment.py  strategy_experiment_v2.py  (+31 more)
research_a/: AUTORESEARCH_A_REPORT.md  backtest_a_harness.py  program.md  run_experiments_a.sh  strategy_a_experiment.py  sweep.py  sweep10.py  sweep11.py  sweep12.py  sweep13.py  sweep14.py  sweep15.py  sweep16.py  sweep17.py  sweep18.py  sweep19.py  sweep2.py  sweep20.py  sweep21.py  sweep22.py  sweep23.py  sweep3.py  sweep4.py  sweep5.py  sweep6.py  sweep7.py  sweep8.py  sweep9.py
research_b/: AUTORESEARCH_B_REPORT.md  backtest_b_harness.py  fetch_data.py  fetch_polymarket_markets.py  program_b.md  run_experiments_b.sh  strategy_b_experiment.py
research_d/: __init__.py  analyze_sweep.py  backtest_sports.py  bootstrap_policy_ci.py  build_exit_timing_set.py  build_training_set.py  compute_dsr.py  download_game_results.py  download_goldsky_sports.py  download_historical_odds.py  download_odds_bulk.py  download_pinnacle_odds.py  download_pmd_parallel.py  download_pmxt_sports.py  download_polymarketdata.py  download_sports_prices.py  elo_glicko_engine.py  enrich_pmd_data.py  eval_exit_policy.py  exit_timing_features.py  prepare.py  prepare_epl.py  prepare_epl_v2.py  prepare_nba_v2.py  prepare_ufc.py  prepare_ufc_v3.py  program.md  resolve_fast.py  run_pipeline.py  sports_db.py  strategy_params.py  sweep_strategy_d.py  sweep_strategy_d_epl.py  sweep_strategy_d_epl_v2.py  sweep_strategy_d_ufc.py  test_core.py  test_exit_timing_features.py  test_expand_trade.py  train_exit_model.py  train_meta_labeler.py  (+1 more)
scripts/: audit_b3_resolutions.py  audit_data.py  backfill_crypto.py  backfill_data.py  backfill_ensemble_pg.py  backfill_training_obs.py  build_strategy_d_model.py  capture_d_orderbook.py  check_c2_live_costs.py  check_c2_pnl.py  check_c2_pnl_v2.py  check_c2_positions.py  check_tx.py  deploy.sh  fix_b3_live_exits.py  fix_ghost_trades.py  fix_resolved_timestamps.py  force_close_b2_pre_reset.py  investigate.py  parallel_digest.py  pull_summaries.sh  reset_c2.py  reset_strategy_c.py  retrospective.py  run_backtest.py  setup_vps.sh  test_buy_sell_cycle.py  test_live_trade.py
src/: main.py
tests/: conftest.py
(+237 files in other folders)
